# preservation-nxng-engine

./: CMakeLists.txt
doc/: build-and-run-restoration-plan.md
restoration/: CMakeLists.txt  README.md
restoration/compat/include/: IMG.h  JPEG.h  TARGA.h  generic.h
restoration/compat/include/IO/: BitConvertIO.h  MCIO.h  cqString.h  qFileIO.h
restoration/compat/include/cInput/: cInput.h
restoration/compat/include/nXng/: cColor.h  cMath.h  cMotion.h  cScreenMN.h  nX_CompilationDirectives.h  nX_Core.h  nX_Entity.h  nX_GUI.h  nX_Geometry.h  nX_HeaderList.h  nX_MSG.h  nX_MetaLUT.h  nX_Metaball.h  nX_Preca.h  nX_Rasterize.h  nX_RawTypes.h  nX_Scene.h  nX_Spark.h  nX_Surface.h  nX_TexMap.h  nX_Version.h  nX_console.h  nX_piXel_Variables.h  piXel.h
restoration/compat/include/xPack/: xPack.h
restoration/compat/src/: BitConvertIO.cpp  IMG.cpp  JPEG.cpp  MCIO.cpp  cqString.cpp  generic.cpp  qFileIO.cpp  xPack.cpp
restoration/nxng_cli/include/nxng_cli/: renderer.h  scene_loader.h  types.h
restoration/nxng_cli/src/: main.cpp  opengl_renderer.cpp  scene_loader.cpp
src/: Cmath.cpp  Nx_core.h  cScreenMN.cpp  cScreen_Window.cpp  nX_Console.cpp  nX_GUI.cpp  nX_PostProcessBloom.cpp  resource.h
